--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         </configuration>
       </plugin>
       <plugin>
-        <artifactId>maven-war-plugin</artifactId>
+        <artifactId>studentapp</artifactId>
         <version>2.6</version>
         <configuration>
           <warSourceDirectory>WebContent</warSourceDirectory>
